// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditBarFull should have transform inline styles if props.editable is true 1`] = `
<section
  className="edit-block"
  style={
    Object {
      "transform": "translateY(-9%)",
    }
  }
>
  <form
    className="edits-form"
    onSubmit={[Function]}
  >
    <div
      className="hue-selection-container"
    >
      <h4>
        Hue Selection:
      </h4>
      <div
        className="hue-selection-inputs"
      >
        <label
          htmlFor="hue-selection"
        >
          <input
            autoComplete="off"
            name="hue-selection"
            placeholder="default: random"
            type="text"
          />
        </label>
        <button>
          Lock
        </button>
      </div>
    </div>
    <section
      className="radio-styles"
    >
      <h4>
        Color schemes:
      </h4>
      <label
        htmlFor="mono"
      >
        mono
        <input
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="mono"
        />
      </label>
      <label
        htmlFor="contrast"
      >
        contrast
        <input
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="contrast"
        />
      </label>
      <label
        htmlFor="triade"
      >
        triade
        <input
          defaultChecked={true}
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="triade"
        />
      </label>
      <label
        htmlFor="tetrade"
      >
        tetrade
        <input
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="tetrade"
        />
      </label>
      <label
        htmlFor="analogic"
      >
        analogic
        <input
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="analogic"
        />
      </label>
    </section>
    <section
      className="radio-styles"
    >
      <h4>
        Color Variations:
      </h4>
      <label
        htmlFor="default"
      >
        default
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="default"
        />
      </label>
      <label
        htmlFor="pastel"
      >
        pastel
        <input
          defaultChecked={true}
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="pastel"
        />
      </label>
      <label
        htmlFor="soft"
      >
        soft
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="soft"
        />
      </label>
      <label
        htmlFor="light"
      >
        light
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="light"
        />
      </label>
      <label
        htmlFor="hard"
      >
        hard
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="hard"
        />
      </label>
      <label
        htmlFor="pale"
      >
        pale
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="pale"
        />
      </label>
    </section>
    <button
      className="update-btn"
    >
      <p>
        Update
      </p>
    </button>
  </form>
</section>
`;

exports[`EditBarFull should match the snapshot with all data passed in correctly 1`] = `
<section
  className="edit-block"
  style={null}
>
  <form
    className="edits-form"
    onSubmit={[Function]}
  >
    <div
      className="hue-selection-container"
    >
      <h4>
        Hue Selection:
      </h4>
      <div
        className="hue-selection-inputs"
      >
        <label
          htmlFor="hue-selection"
        >
          <input
            autoComplete="off"
            name="hue-selection"
            placeholder="default: random"
            type="text"
          />
        </label>
        <button>
          Lock
        </button>
      </div>
    </div>
    <section
      className="radio-styles"
    >
      <h4>
        Color schemes:
      </h4>
      <label
        htmlFor="mono"
      >
        mono
        <input
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="mono"
        />
      </label>
      <label
        htmlFor="contrast"
      >
        contrast
        <input
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="contrast"
        />
      </label>
      <label
        htmlFor="triade"
      >
        triade
        <input
          defaultChecked={true}
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="triade"
        />
      </label>
      <label
        htmlFor="tetrade"
      >
        tetrade
        <input
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="tetrade"
        />
      </label>
      <label
        htmlFor="analogic"
      >
        analogic
        <input
          name="colorScheme-selection"
          onClick={[Function]}
          type="radio"
          value="analogic"
        />
      </label>
    </section>
    <section
      className="radio-styles"
    >
      <h4>
        Color Variations:
      </h4>
      <label
        htmlFor="default"
      >
        default
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="default"
        />
      </label>
      <label
        htmlFor="pastel"
      >
        pastel
        <input
          defaultChecked={true}
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="pastel"
        />
      </label>
      <label
        htmlFor="soft"
      >
        soft
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="soft"
        />
      </label>
      <label
        htmlFor="light"
      >
        light
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="light"
        />
      </label>
      <label
        htmlFor="hard"
      >
        hard
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="hard"
        />
      </label>
      <label
        htmlFor="pale"
      >
        pale
        <input
          name="variation-selection"
          onClick={[Function]}
          type="radio"
          value="pale"
        />
      </label>
    </section>
    <button
      className="update-btn"
    >
      <p>
        Update
      </p>
    </button>
  </form>
</section>
`;
